[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'z80'
version = '1.0b3'
description = 'Fast and flexible Z80/i8080 emulator'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
  {name = 'Ivan Kosarev', email = 'mail@ivankosarev.com'}
]
requires-python = '>=3.7'

[project.urls]
Homepage = 'https://github.com/kosarev/z80/'

[project.scripts]
z80 = 'z80:main'

[tool.setuptools]
packages = ['z80']
