[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'z80'
version = '1.0b3'
description = 'Fast and flexible Z80/i8080 emulator'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
  {name = 'Ivan Kosarev', email = 'mail@ivankosarev.com'}
]
requires-python = '>=3.7'

[project.urls]
Homepage = 'https://github.com/kosarev/z80/'

[project.scripts]
z80 = 'z80:main'

[tool.setuptools]
packages = ['z80']

[tool.ruff]
# The transistor-level simulator is excluded from linting the same way it is
# from type-checking (see .mypy.ini); it is a large, separately-maintained file.
extend-exclude = ['tests/z80sim']

[tool.cibuildwheel]
# Build wheels for the supported CPython versions and smoke-test that the
# compiled extension imports. Used by the release workflow.
build = 'cp310-* cp311-* cp312-* cp313-*'
test-command = 'python -c "import z80"'
