[build-system]
requires = ['setuptools>=61.0', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'z80'
version = '1.0.0'
description = 'Fast and flexible Z80/i8080 emulator'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
  {name = 'Ivan Kosarev', email = 'mail@ivankosarev.com'}
]
requires-python = '>=3.7'
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Education',
  'Operating System :: OS Independent',
  'Programming Language :: C++',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: System :: Emulators',
]

[project.urls]
Homepage = 'https://github.com/kosarev/z80/'

[project.scripts]
z80 = 'z80:main'

[tool.setuptools]
packages = ['z80']

[tool.ruff]
# The transistor-level simulator is excluded from linting the same way it is
# from type-checking (see .mypy.ini); it is a large, separately-maintained file.
extend-exclude = ['tests/z80sim']

[tool.cibuildwheel]
# Build wheels for the supported CPython versions and smoke-test that the
# compiled extension imports. Used by the release workflow.
build = 'cp310-* cp311-* cp312-* cp313-*'
test-command = 'python -c "import z80"'
